# Real_Time_Data_Processing

./: .gitignore
backend/: .env  alembic.ini  dataaa.json  pyproject.toml
backend/alembic/versions/: 0d02b766e99f_changed_column_names.py  43d4ab01c380_initial_migrations.py  b09499a07845_remove_date_object_in_security_table.py
backend/app/: database.py  main.py  models.py  router.py  schemas.py  utils.py
backend/app/celery/: celery_tasks.py
backend/app/websocket/: client.py  websocket_manager.py  websocket_router.py
